--- a/main_including_results.ipynb
+++ b/main_including_results.ipynb
@@ -5195,27 +5195,30 @@
         "print(res)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        },
-        "id": "UmMrUVWX6vLd",
-        "outputId": "b88886ee-7908-4767-d96c-a5de9471e843"
+        "id": "UmMrUVWX6vLd"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-ac22c9bb4012>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodels_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'ADNN'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Sionna'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'SionnaPlus'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Transformer'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'LSTM'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ViterbiNet'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_curves\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'BER'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'NET'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'InfoBits'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Modulation'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m#adnn = df[df.NET == 'ADNN']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#model_ber = df[df.NET == model]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'all_curves' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# snapshot of latest results. \n",
+        "|SNR     |ADNN\t   |Sionna\t  |SionnaPlus |Transformer|\tLSTM\t    |ViterbiNet\t|ClassicViterbi\n",
+        "|:--------|:------:|:--------:|:---------:|:---------:|:---------:|:---------:|--------------|\t\t\n",
+        "|7|0.041556|0.037167|0.034194|0.042250|0.049028|0.030667|0.022167|\n",
+        "|8|0.029583|0.020000|0.022917|0.025333|0.036583|0.016833|0.011111|\n",
+        "|9|0.018250|0.010528|0.010833|0.014833|0.029167|0.009222|0.003694|\n",
+        "|10|\t0.010528|0.005361|0.006333|0.007944|0.015972|0.004139|0.001333|\n",
+        "|11|\t0.004056|0.001778|0.001667|0.002333|0.007694|0.001250|0.000194|\n",
+        "|12|\t0.003139|0.001000|0.000333|0.000806|0.003694|0.000444|0.000083|\n",
+        "|13|\t0.000611|0.000500|0.000111|0.000083|0.000889|0.000167|0.000000|\n",
+        "|14|\t0.000389|0.000167|0.000056|0.000000|0.000917|0.000083|0.000000|\n",
+        "|15|\t0.000194|0.000278|0.000000|0.000000|0.000806|0.000083|0.000000|  \n"
+      ],
+      "metadata": {
+        "id": "zThKkEE5-26r"
+      }
     }
   ],
   "metadata": {
@@ -5224,7 +5227,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPsEelJtzNZD89xJo4vzcz",
+      "authorship_tag": "ABX9TyMviRcEKC/Yi+OqY21Prv0x",
       "include_colab_link": true
     },
     "kernelspec": {
